--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,10 @@
 #json-display {
-  width: 100vw;
-  height: 100vh;
+  display: block;
+  font-family: monospace;
+  padding: 1rem;
+  border: 1px solid #ccc;
+  margin: 2rem auto;
+  width: 90vw;
+  height: 80vh;
+  resize: none;
 }
