--- a/src/style.css
+++ b/src/style.css
@@ -1,10 +1,14 @@
 #json-display {
   display: block;
   font-family: monospace;
-  padding: 1rem;
   border: 1px solid #ccc;
-  margin: 2rem auto;
+  margin: 1rem auto;
   width: 90vw;
   height: 80vh;
   resize: none;
+}
+
+#file-input {
+  display: block;
+  margin: 2rem auto 0rem;
 }
